# media_person

./: .gitignore  .gitmodules  README.md  cabal.config  config.json.sample  main.hs  media_person.cabal
src/: FileUtils.hs  Main.hs  MediaConversion.hs  ServerUtils.hs  main.hs
src/MediaPerson/: video.hs
test/data/: small.mov
