name:                MediaPerson
version:             0.0.1
synopsis:            Media server
homepage:            https://github.com/yourName/repoName
license:             MIT
author:              Brian Lonsdorf
maintainer:          you@email.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable media_person
  hs-source-dirs:      src
  main-is:             main.hs

  other-modules:
    MediaPerson.Video

  build-depends:       base >=4.6.0.1
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty ==0.6.*
                     , text
                     , aeson
                     , bytestring
                     , monad-logger
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
                     , random
                     , filepath
                     , process
                     , regex-compat
                     , unordered-containers
                     , MissingH
                     , split
                     , directory
                     , containers
  ghc-options:       -Wall -O2 -threaded

