name:             MediaPerson
version:          0.0.4
synopsis:         Media server
homepage:         https://github.com/looprecur/media_person
license:          MIT
author:           Brian Lonsdorf
maintainer:       you@email.com
category:         Web
build-type:       Simple
cabal-version:    >=1.8

executable media_person
  main-is:        Main.hs
  ghc-options:    -Wall -W -Werror -O2 -threaded
  build-depends:  base
                , wai                   , warp         , http-types
                , scotty                , text         , aeson
                , bytestring            , monad-logger , transformers
                , wai-middleware-static , wai-extra    , wai-cors
                , time                  , random       , filepath
                , process               , regex-compat , unordered-containers
                , MissingH              , split        , directory
                , containers            , resourcet    , jobqueue
                , url                   , regex-base   , regex-tdfa
                , safe                  , HTTP         , stm
                , string-conversions
  other-modules:  FileUtils
                , MediaConversion
                , ServerUtils
  hs-source-dirs: src
  extensions:     OverloadedStrings, RankNTypes, DeriveGeneric, LambdaCase
